Ensure profile pic is not cut off on mobile

--- a/benlottes-react-app/src/App.css
+++ b/benlottes-react-app/src/App.css
@@ -18,6 +18,12 @@ html {
   font-family: Aaux Next;
 }
 
+@media screen and (max-width: 375px) {
+  body {
+    align-items: flex-start;
+  }
+}
+
 .app {
   width: 960px;
   margin: 10;
